<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>Particle Filter Algorithim for MTE 544 Lab 2</description>
  <maintainer email="ayush.ghosh@uwaterloo.ca">ayush.ghosh</maintainer>
  <maintainer email="nshaju@uwaterloo.ca">nshaju</maintainer>
  <maintainer email="abhi.agrahari@uwaterloo.ca">abhi.agrahari</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>csv</depend>
  <depend>sqlite3</depend>
  <depend>rosbag2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_py</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
